CHANGES
=======

3.9.2 (unreleased)
------------------


3.9.1 (2009-04-20)
------------------

- Restore compatibility with Python 2.4.

3.9.0 (2009-03-19)
------------------

- Don't raise deprecation warnings on Python 2.6.

- Drop dependency on ``zope.annotation``. Instead, we make classes implement
  `IAttributeAnnotatable` in ZCML configuration, only if ``zope.annotation``
  is available. If your code relies on annotatable `CookieClientIdManager` 
  and `PersistentSessionDataContainer` and you don't include the zcml classes
  configuration of this package, you'll need to use `classImplements` function
  from ``zope.interface`` to make those classes implement `IAttributeAnnotatable`
  again.

- Drop dependency on zope.app.http, use standard date formatting function
  from the ``email.utils`` module.

- Zope 3 application bootstrapping code for session utilities was moved into
  zope.app.appsetup package, thus drop dependency on zope.app.appsetup in this
  package. 

- Drop testing dependencies, as we don't need anything behind zope.testing and
  previous dependencies was simply migrated from zope.app.session before.

- Remove zpkg files and zcml slugs.

- Update package's description a bit.

3.8.1 (2009-02-23)
------------------

- Add an ability to set cookie effective domain for CookieClientIdManager.
  This is useful for simple cases when you have your application set up on
  one domain and you want your identification cookie be active for subdomains.

- Python 2.6 compatibility change. Encode strings before calling hmac.new()
  as the function no longer accepts the unicode() type.

3.8.0 (2008-12-31)
------------------

- Add missing test dependency on ``zope.site`` and
  ``zope.app.publication``.

3.7.1 (2008-12-30)
------------------

- Specify i18n_domain for titles in apidoc.zcml

- ZODB 3.9 no longer contains
  ZODB.utils.ConflictResolvingMappingStorage, fixed tests, so they
  work both with ZODB 3.8 and 3.9.


3.7.0 (2008-10-03)
------------------
